--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "proxy": "http://localhost:4000",
   "name": "client",
   "version": "0.1.0",
   "private": true,
@@ -11,6 +12,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
