--- a/package.json
+++ b/package.json
@@ -4,24 +4,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.2.2",
     "bootstrap": "^5.3.0-alpha1",
     "date-fns": "^2.29.3",
-    "easymde": "^2.18.0",
-    "formik": "^2.2.9",
-    "moment": "^2.29.4",
+    "i18next": "^22.4.9",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
-    "react-bootstrap-icons": "^1.10.2",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-filter": "^1.3.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.1.4",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "react-simplemde-editor": "^5.2.0",
